# rosduct

./: CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md  package.xml  requirements.txt
config/: arm.yaml  arm_control.yaml  arm_depth_video.yaml  arm_rosduct.yaml  arm_video.yaml  my.yaml  python_logging.conf  summit_xl.yaml  tb3.yaml
launch/: client_arm.launch  client_arm_controller.launch  client_arm_depth_video.launch  client_arm_video.launch  client_autobahn.launch  client_summit_xl.launch  client_tb3.launch  local_part.launch  local_part_using_bridge.launch  local_publish_all.launch
scripts/: rosduct_main_bridge.py  rosduct_main_bridge_autobahn.py  rosduct_param_sync.py
src/rosduct/: conversions.py  rosbridge_client.py  rosbridge_client_autobahn.py  rosbridge_protocol_cbor.py  rosduct_bridge.py  rosduct_bridge_autobahn.py  rosduct_impl.py
srv/: ROSDuctConnection.srv
