<?xml version="1.0"?>
<package>
  <name>rosduct</name>
  <version>0.0.7</version>
  <description>ROSduct, the duct of ROS messages. ROSduct acts as a proxy to expose ROS topics, services and parameters from a remote roscore into a local roscore via the [rosbridge protocol](https://github.com/RobotWebTools/rosbridge_suite/blob/develop/ROSBRIDGE_PROTOCOL.md).</description>

  <author email="Sammy.Pfeiffer@student.uts.edu.au">Sammy Pfeiffer</author>
  <author email="toff@zhaw.ch">Giovanni Toffetti</author>
  <maintainer email="toff@zhaw.ch">Giovanni Toffetti</maintainer>

  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend>python-ws4py-pip</build_depend> -->
  <!-- <build_depend>python-pydispatcher</build_depend> -->

  <!-- <run_depend>python-ws4py-pip</run_depend>   -->
  <!-- <run_depend>python-pydispatcher</run_depend>   -->
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosapi</run_depend>
  <run_depend>rosbridge_suite</run_depend>

</package>
